--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,73 @@
-.App {
-  text-align: center;
+/* basic reset */
+
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+  color: #0A0908;
 }
 
-.App-logo {
-  height: 40vmin;
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* custom css */
+
+.pagebox{
+  height: 100vh;
+  background-color: #5E503F;
+  background-image: url('./components/images/leatherbackground.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+ 
+}
+
+.collection{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 25px;
 }
 
-.App-link {
-  color: #09d3ac;
+.my-card{
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+}
+
+.card{
+  background-color: #F2F4F3;
+  width: 60vw;
+  height:33vh;
+}
+.card-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+
+}
+
+.icon{
+  display: block;
+  float: right;
+  margin-top: 5px;
+ 
 }
